name:                hsass
version:             0.1.0.0
synopsis:            Integrating Sass into Haskell applications.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Jakub Fijałkowski
maintainer:          fiolek94@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable hsass
  main-is:             Main.hs
  other-modules:
    Text.Sass,
    Text.Sass.Options,
    Text.Sass.Compilation,
    Text.Sass.Values,
    Text.Sass.Functions
  build-depends:
    base >=4.7 && <4.8,
    hlibsass >= 0.1,
    data-default-class,
    filepath >= 1.0,
    mtl >= 2.0,
    monad-loops >= 0.3
  default-language:    Haskell2010
  ghc-options:         -pgml g++